fixed dark mode issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+#main{
+  min-width: 100vw;
+}
+html, body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 
+}
 html {
   scroll-behavior: smooth;
 }
